Blender crashes on linking armature with custom shape #32156

Closed
opened 2012-07-21 02:37:08 +02:00 by George Miller · 3 comments

%%%Hello,

I try to link a group with an armature with a bone that has a custom shape.
If I try to link the group in a new scene Blender crashes if the armature was
selected in the source scene before saving. The error only occurs if the
Viewport Shading of the scene the group shall linked to is Solid.

My short investigation of the problem revealed that the bug occurs in the
function draw_object (\editors\space_view3d\drawobject.c) on line 6687
on the call of drawObjectSelect(scene, v3d, ar, base, ob_wire_col) because
ob_wire_col is NULL.

To redo the error link the group "Group" from the attached file.

Tested with Blender (official release):


Blender 2.63 (sub 14) System Information


version 2.63 (sub 14), revision b'49072'. b'Release'
build date: b'2012-07-20', b'06:28:24'
platform: b'Windows:32bit'
build cflags: b'/nologo /Ob1 /J /W1 /Gd /we4013 /wd4018 /wd4244 /wd4305 /wd4800 /wd4065 /wd4267 /openmp -O2 -DNDEBUG -DWIN32 -D_CONSOLE -D_LIB -D_CRT_SECURE_NO_DEPRECATE -DOPJ_STATIC -DWIN64 -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE'
build cxxflags: b'/nologo /Ob1 /J /W1 /Gd /we4013 /wd4018 /wd4244 /wd4305 /wd4800 /wd4065 /wd4267 /openmp /EHsc -O2 -DNDEBUG -DWIN32 -D_CONSOLE -D_LIB -D_CRT_SECURE_NO_DEPRECATE -DOPJ_STATIC -DWIN64 -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE'
build linkflags: b'/SUBSYSTEM:CONSOLE /MACHINE:X64 /STACK:2097152 /OPT:NOREF /INCREMENTAL:NO /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcmrt.lib /NODEFAULTLIB:msvcurt.lib /NODEFAULTLIB:msvcrtd.lib'
build system: b'SCons'

System:


Windows 7 Professional 64Bit
SP 1
Intel Core2 Quad Q9300 @ 2.50GHz

Python:


version: 3.2 (r32:88445, Mar 2 2011, 16:59:21) [MSC v.1500 64 bit (AMD64)]

OpenGL


renderer: 'ATI Radeon HD 3800 Series '
vendor: 'ATI Technologies Inc.'
version: '3.3.10750 Compatibility Profile Context'

Also tested on Vista 64Bit and with a (own) MinGW build of the same Blender
version with the same result (Blender crashes).%%%

%%%Hello, I try to link a group with an armature with a bone that has a custom shape. If I try to link the group in a new scene Blender crashes if the armature was selected in the source scene before saving. The error only occurs if the Viewport Shading of the scene the group shall linked to is Solid. My short investigation of the problem revealed that the bug occurs in the function draw_object (\editors\space_view3d\drawobject.c) on line 6687 on the call of drawObjectSelect(scene, v3d, ar, base, ob_wire_col) because ob_wire_col is NULL. To redo the error link the group "Group" from the attached file. Tested with Blender (official release): **** # Blender 2.63 (sub 14) System Information **** version 2.63 (sub 14), revision b'49072'. b'Release' build date: b'2012-07-20', b'06:28:24' platform: b'Windows:32bit' build cflags: b'/nologo /Ob1 /J /W1 /Gd /we4013 /wd4018 /wd4244 /wd4305 /wd4800 /wd4065 /wd4267 /openmp -O2 -DNDEBUG -DWIN32 -D_CONSOLE -D_LIB -D_CRT_SECURE_NO_DEPRECATE -DOPJ_STATIC -DWIN64 -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE' build cxxflags: b'/nologo /Ob1 /J /W1 /Gd /we4013 /wd4018 /wd4244 /wd4305 /wd4800 /wd4065 /wd4267 /openmp /EHsc -O2 -DNDEBUG -DWIN32 -D_CONSOLE -D_LIB -D_CRT_SECURE_NO_DEPRECATE -DOPJ_STATIC -DWIN64 -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE' build linkflags: b'/SUBSYSTEM:CONSOLE /MACHINE:X64 /STACK:2097152 /OPT:NOREF /INCREMENTAL:NO /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcmrt.lib /NODEFAULTLIB:msvcurt.lib /NODEFAULTLIB:msvcrtd.lib' build system: b'SCons' System: **** Windows 7 Professional 64Bit SP 1 Intel Core2 Quad Q9300 @ 2.50GHz Python: **** version: 3.2 (r32:88445, Mar 2 2011, 16:59:21) [MSC v.1500 64 bit (AMD64)] OpenGL **** renderer: 'ATI Radeon HD 3800 Series ' vendor: 'ATI Technologies Inc.' version: '3.3.10750 Compatibility Profile Context' Also tested on Vista 64Bit and with a (own) MinGW build of the same Blender version with the same result (Blender crashes).%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev49115. Thanks for the report, closing.%%%

%%%Fixed in svn rev49115. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32156
No description provided.